receiver.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-receive
  labels:
    app: thanos-receive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-receive
  serviceName: thanos-receive
  template:
    metadata:
      labels:
        app: thanos-receive
    spec:
      containers:
      - name: thanos-receive
        image: quay.io/thanos/thanos:v0.8.1
        args:
        - receive
        - --tsdb.path=/data/remote-write-receive-data
        - --debug.name=receive       
        - --log.level=debug       
        - --grpc-address=0.0.0.0:19891
        - --http-address=0.0.0.0:18091
        - --remote-write.address=0.0.0.0:19291
        ports:
        - name: http
          containerPort: 19291
        - name: grpc
          containerPort: 19891
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-receive
  name: thanos-receive
spec:
  ports:
  - port: 9091
    protocol: TCP
    targetPort: web-proxy
    name: web-proxy
  - port: 19891
    protocol: TCP
    targetPort: grpc
    name: grpc
  selector:
    app: thanos-receive
  type: ClusterIP
