thanos.yml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: thanos-receive
  labels:
    app: thanos-receive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-receive
  serviceName: thanos-receive
  template:
    metadata:
      labels:
        app: thanos-receive
    spec:
      serviceAccountName: thanos-receive
      containers:
      - name: thanos-receive
        image: quay.io/thanos/thanos:v0.8.1
        args:
        - receive
        - --tsdb.path=/data/remote-write-receive-data
        - --debug.name=receive       
        - --log.level=debug       
        - --http-address=0.0.0.0:18091
        - --remote-write.address=0.0.0.0:19291
        - --objstore.config-file=/etc/prometheus/store-s3-secret.yaml
        ports:
        - name: http
          containerPort: 19291
        volumeMounts:
        - name: remote-write-data
          mountPath: /data/remote-write-receive-data
      volumes:
      - name: remote-write-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-receive
  name: thanos-receive
spec:
  ports:
  - port: 19291
    protocol: TCP
    targetPort: grpc
    name: grpc
  selector:
    app: thanos-receive
  type: ClusterIP
